--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # External gems
 # See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
-gems:
+plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
   - jekyll-paginate
@@ -9,18 +9,18 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: Developer Alex
+subtitle: "개발 / 일상 등 소소한 이야기를 하는 공간입니다."
+email: dhkim.ce@gmail.com
+name: Alex
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+  자바스크립트 위주로 개발하고 있으며, 풀스택 개발자를 목표로 하고 있습니다.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
-baseurl: "/centrarium" # the subpath of your site, e.g. /blog/
+baseurl: "/home" # the subpath of your site, e.g. /blog/
 url: "http://bencentra.github.io" # the base hostname & protocol for your site
-cover: "/assets/header_image.jpg"
+cover: "/assets/banner5.png"
 logo: "/assets/logo.png"
 
 # Build settings
@@ -31,6 +31,7 @@ inter_post_navigation: false
 highlightjs_theme: "monokai-sublime"
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
+# 날짜, tag, category 별로 게시물을 보관 할 수 있다.
 jekyll-archives:
   enabled:
     - categories
@@ -72,29 +73,29 @@ descriptions:
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
-    url: https://twitter.com/TheBenCentra
+    username:
+    url:
     desc: Follow me on Twitter
     share: true
 
   - name: Facebook
     icon: facebook
-    username: thebencentra
+    username:
     url:
     desc: Friend me on Facebook
     share: true
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: DongHyunKims
+    url: https://github.com/DongHyunKims
     desc: Fork me on GitHub
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
+    username: DongHyunKims
+    url: www.linkedin.com/in/donghyun-kim-486a71129
     desc: Connect with me on LinkedIn
     share: true
 
