서브타이틀 변경

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: Developer Alex
-subtitle: "전반적인 웹 개발에 관한 내용 공유하는 공간입니다."
+subtitle: "개발을 하면서 경험한 내용을 기록하고 공유하는 공간 입니다."
 email: dhkim.ce@gmail.com
 name: Alex
 description: >
