댓글 시스템 수정

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,11 @@ descriptions:
   - cat: dummy
     desc: "Just some placeholder posts, lorem ipsum and the rest."
 
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: alex_disqus
+
 # Social icons and sharing options
 #
 # Social settings are used in two places:
